--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.14.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
